# Geomviz

./: .gitignore  README.md  animation.py  blender-geomviz.sublime-project  blender-geomviz.sublime-workspace  build.nu  client.py  example.blend  examples.jl  geometry-node-assets.blend  loader.py  main.py  pixi.toml  reloader.py  socket_client.jl  socket_server.py  typos.toml  xyz.py
.github/workflows/: release.yml
BGVClient/: Manifest.toml  Project.toml
BGVClient/ext/: GeometricAlgebraExt.jl
BGVClient/src/: 1d-up.jl  BGVClient.jl  algebras.jl  cga.jl  client.jl  encode.jl  pga.jl  vga.jl
Geomviz.jl/: Manifest.toml
Geomviz.jl/src/: Geomviz.jl  animation.jl  cga.jl  client.jl  pga.jl  rigs.jl  spherical-1up.jl  vga.jl
bga/: __init__.py  assets.blend  assets.py  panels.py  properties.py  rigs.py  scene.py  server.py
bgv/: __init__.py  assets.blend  assets.py  panels.py  properties.py  rigs.py  scene.py  server.py  timer.py
blender-plugin/: build.nu
blender-plugin/geomviz/: assets.blend  assets.py  loader.py  panels.py  properties.py  rigs.py  server.py
blender_addon/: server.py
blender_addon/geomviz/: __init__.py  assets.blend  assets.py  blender_manifest.toml  feedback.txt  loader.py  panels.py  properties.py  rigs.py  scene.py  (+2 more)
clients/: README.md
clients/geomviz_clifford/: ipython-setup.py  pyproject.toml
clients/geomviz_clifford/geomviz_clifford/: __init__.py  encode.py  magics.py
docs/: animation.m4v  animation.webm
geomviz/: __init__.py  assets.blend  assets.py  loader.py  panels.py  properties.py  rigs.py  scene.py  server.py  utils.py
(+35 files in other folders)
