[project]
name = "geomviz_clifford"
version = "0.0.1"
authors = [
	{ name="Joseph Wilson", email="jo.alex.w@gmail.com" },
]
description = "Blender Geomviz integration for clifford"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/Jollywatt/Geomviz"
